Forced jdk8 because cpt4.jar file does not run with openjdk11